[tool.poetry]
name = "mediaaio"
version = "0.1.0"
description = ""
authors = ["NightWatcher <hitszzzf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
openai-whisper = "^20231117"
gradio = "^4.17.0"
aiofiles = "^23.2.1"
requests = "^2.31.0"
transformers = "^4.37.2"
accelerate = "^0.27.2"
basicsr = {version = "1.4.2", source = "aliyun"}
facexlib = "^0.3.0"
gfpgan = "^1.3.8"
torchvision = "^0.17.0"
ffmpeg-python = "^0.2.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
