[tool.poetry]
name = "mediaaio"
version = "0.1.0"
description = ""
authors = ["NightWatcher <hitszzzf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.4"
openai-whisper = "^20231117"
gradio = "^4.19.1"
aiofiles = "^23.2.1"
requests = "^2.31.0"
transformers = "^4.37.2"
accelerate = "^0.27.2"
basicsr = {version = "1.4.2", source = "aliyun"}
facexlib = "^0.3.0"
gfpgan = "^1.3.8"
ffmpeg-python = "^0.2.0"
pims = "^0.6.1"
httpx = "^0.26.0"
flash-attention = "^1.0.0"
auto-gptq = "^0.6.0"
optimum = "^1.16.2"
torch = "2.1.1"
librosa = "^0.10.1"
audio-separator = {extras = ["gpu"], version = "^0.14.4"}
timm = "^0.9.12"
realesrgan = "^0.3.0"
funasr = "^1.0.5"
resampy = "^0.4.2"
torchaudio = "2.1.1"
modelscope = "^1.12.0"
rotary-embedding-torch = "^0.5.3"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
