[tool.poetry]
name = "vrt"
version = "0.1.0"
description = ""
authors = ["NightWatcher <hitszzzf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
addict = "^2.4.0"
future = "^1.0.0"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
scikit-image = "^0.22.0"
scipy = "^1.12.0"
torch = ">=1.9"
torchvision = "^0.17.1"
timm = "^0.9.16"
einops = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
